@@ -1,1 +1,5 @@
-SUBDIRS = src
+SUBDIRS = src EISMINT-3
+
+data::
+	(cd EISMINT-3 && $(MAKE) $@)
+
