@@ -1,1 +1,5 @@
 SUBDIRS = src fenscan
+
+data::
+	(cd fenscan && $(MAKE) $@)
+
